# BigBang

./: .gitignore  BigBang.c  BigBang.h  CMakeLists.txt  CreateVideo.py  FromTgaToPng.py  GravityNstuff.c  create_video.py
BigBang/: BigBang.c  BigBang.h  CMakeLists.txt  FileName.c  GravityNstuff.c  tga.c
BigBang/BigBang/: BigBang.c  BigBang.h  PlotFunctions.c
FileNameChanger/: CMakeLists.txt
hej/: BigBang.c  BigBang.h  CMakeLists.txt  GravityNstuff.c  tga.h
include/: BigBang.h
src/: FileName.c
